--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -40,4 +46,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer id="footer">
+    <br></br>
+    <div class="footer">
+        <h3 class="centered-text" >Contact the dev:</h3>
+        <ul>
+            <li>Phone: (512) 949-8243</li>
+            <li>Email: moltencreeper25@gmail.com</li>
+            <li>LinkedIn: https://www.linkedin.com/in/riley-underwood-774aaa191/</li>
+        </ul>
+    </div>
+    <br></br>
+</footer>
 </html>
