Can view posts in full with more input options.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -47,15 +47,18 @@
     -->
   </body>
   <footer id="footer">
-    <br></br>
     <div class="footer">
+      <div class="footer-section-first">
+        <div class="logo-image"></div>
+      </div>
+      <div class="footer-section-second">
         <h3 class="centered-text" >Contact the dev:</h3>
         <ul>
             <li>Phone: (512) 949-8243</li>
             <li>Email: moltencreeper25@gmail.com</li>
             <li>LinkedIn: https://www.linkedin.com/in/riley-underwood-774aaa191/</li>
         </ul>
+      </div>
     </div>
-    <br></br>
 </footer>
 </html>
